Stop signup buttons from growing too much.

--- a/modules/core/client/scss/block/_signup-demo.scss
+++ b/modules/core/client/scss/block/_signup-demo.scss
@@ -17,6 +17,7 @@ article.signup-demo {
         > input, > button {
             width: 25%;
             min-width: 12em;
+            max-width: 19.75em;
             margin-bottom: 1rem;
 
             & + * { margin-left: 1.125rem; }
